UserService C# .Net7.0 Mocroservice ASP.Net Docker

--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -3,8 +3,11 @@
     "DefaultConnection": "server=localhost;database=userDB;user=root;password=5334"
   },
   "JWT": {
-    "Secret": "12345"
-  },
+    "Secret": "thisIsAStrong32CharactersSecret!",
+    "Issuer": "YOUR_ISSUER_HERE",
+    "Audience": "YOUR_AUDIENCE_HERE",
+    "ExpirationDays": "1"
+  },  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
