--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,9 +2,8 @@
     "version": "0.2.0",
     "configurations": [
         {
-            // Use IntelliSense to find out which attributes exist for C# debugging
-            // Use hover for the description of the existing attributes
-            // For further information visit https://github.com/dotnet/vscode-csharp/blob/main/debugger-launchjson.md
+            // this code is for eShop project Tutorial
+            // by Maitham Al-rubaye
             "name": ".NET Core Launch (web)",
             "type": "coreclr",
             "request": "launch",
