UserService C# .Net7.0 Mocroservice ASP.Net Docker

--- a/UserService/docker-compose.yml
+++ b/UserService/docker-compose.yml
@@ -1,7 +1,12 @@
 version: '3.4'
 
+networks:
+  default:
+    external:
+      name: eShopNetwork
+
 services:
-  webapp:
+  user:
     build:
       context: .
       dockerfile: Dockerfile
