--- a/UserService/appsettings.Development.json
+++ b/UserService/appsettings.Development.json
@@ -1,12 +1,18 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=userDB;user=root;password=5334"
+    "DefaultConnection": "server=localhost;database=userDB;user=root;password=4335"
   },
   "JWT": {
     "Secret": "thisIsAStrong32CharactersSecret!",
     "Issuer": "YOUR_ISSUER_HERE",
     "Audience": "YOUR_AUDIENCE_HERE",
     "ExpirationDays": "1"
+  },
+  "RabbitMQ": {
+    "Hostname": "rabbitmq",
+    "QueueName": "userRegisteredQueue",
+    "Username": "guest",
+    "Password": "guest"
   },
   "Logging": {
     "LogLevel": {
